--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -445,7 +445,7 @@ a:hover, a:active, a:focus {
 
 #experience .experience-img {
   /* background: url('../images/experience-img.jpg') no-repeat; */
-  background: url('../images/img-exp-1.jpeg') no-repeat;
+  background: url('../images/img-exp-1.jpg') no-repeat;
 }
 
 #experience .media-heading {
